--- a/TogetherSemiProject/src/main/resources/static/css/join.css
+++ b/TogetherSemiProject/src/main/resources/static/css/join.css
@@ -1,13 +1,14 @@
 @charset "EUC-KR";
-.clear:after{    /* 자식이 모두 float 을 사용할때 부모가 높이를 갖게하기 위함 */
-    content:"";
-    display:block;
-    clear:both;
-}
+		
+		.clear:after{    /* 자식이 모두 float 을 사용할때 부모가 높이를 갖게하기 위함 */
+		    content:"";
+		    display:block;
+		    clear:both;
+		}
 
 
-* {
-            box-sizing: border-box;
+		* {
+			box-sizing: border-box;
         }
         
         body {
@@ -24,6 +25,12 @@
             border: 1px solid #ddd;
             box-shadow: 0px 0px 5px #ddd;
             text-align: center;
+        }
+        
+        .container-fluid {
+        	margin-top : 100px;
+        	margin-bottom : 150px;
+        
         }
         
         .container h1 {
@@ -53,10 +60,10 @@
         margin-bottom: 20px;
       }
       
-      .input-inemail {
+      .input-mo {
         display: flex;
         flex-direction: column;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
       
       .btn-wrap {
@@ -166,7 +173,15 @@
       	height : 50px;
       	float: left;
       	margin-left: 10px;
-      	margin-bottom:10px;	
+      	margin-bottom:10px;
+      	
+      	background: #819FF7;
+      	background-size: 200%;
+        color:white;
+        font-weight: 500;
+        border:none;
+        cursor:pointer;
+     
       }
       
       .innum {
@@ -175,7 +190,14 @@
       	height : 30px;
       	float: left;
       	margin-left: 10px;
-      	margin-bottom:10px;	
+      	margin-bottom:10px;
+      	
+      	background: #8181F7;
+      	background-size: 200%;
+        color:white;
+        font-weight: 500;
+        border:none;
+        cursor:pointer;
       }
       
       .box.int_pass {
@@ -184,15 +206,6 @@
 
       .box.int_pass_check {
           padding-right: 40px;
-      }
-      
-      .step_url {
-          /*@daham.com*/
-          position: absolute;
-          top: 16px;
-          right: 13px;
-          font-size: 15px;
-          color: #8e8e8e;
       }
       
       select {
@@ -209,7 +222,7 @@
       }
       
       .la{
-       font-size:21px;
+       font-size:22px;
        margin-bottom:10px;
       }
       
@@ -223,6 +236,24 @@
        
        .gory { 
        	margin-top:3px;
+       }
+       
+       .pk {
+       	display: flex;
+       	
+       }
+       
+       .pick {
+       	display: inline-block;
+       	font-size: 18px;
+       	width: 150px;
+       }
+       
+       .pickne {
+       	display: inline-block;
+       	font-size: 18px;
+       	width: 150px;
+       	
        }
        
       
